Added basic home page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-<title>Page Title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Smetron - Building Intelligent Products</title>
+    <link href="https://fonts.googleapis.com/css?family=Karla:400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.materialdesignicons.com/4.8.95/css/materialdesignicons.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/bd-coming-soon.css">
 </head>
-<body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<body class="min-vh-100 d-flex flex-column">
 
+    <header>
+        <div class="container">
+            <nav class="navbar navbar-dark bg-transparenet">
+                <a class="navbar-brand" href="#">
+					<p><b>Smetron - </b> Innovations</p>
+                    <!-- <img src="assets/images/logo.svg" alt="logo"> -->
+                </a>
+                <span class="navbar-text ml-auto d-none d-sm-inline-block">Phone: +60 18-314-3068 </span>
+                <span class="navbar-text d-none d-sm-inline-block">Mail: smetron @ pm.com</span>
+            </nav>
+        </div>
+    </header>
+    <main class="my-auto">
+        <div class="container">
+            <h1 class="page-title">Who we are</h1>
+            <p class="page-description">We are a team of engineers who develop embedded computers and software that use artificial intelligence models for data acquisition, event detection, cloud connection, and online monitoring solutions for Liquid Level and Flow Measurement.
+            </p>
+            <p>Stay connected</p>
+            <nav class="footer-social-links">
+                <a href="smetron @ pm.com" class="social-link"><i class="mdi mdi-email"></i></a>
+                <a href="twitter.com/smetron_press" class="social-link"><i class="mdi mdi-twitter"></i></a>
+                <!-- <a href="#!" class="social-link"><i class="mdi mdi-google"></i></a> -->
+                <!-- <a href="#!" class="social-link"><i class="mdi mdi-email"></i></a> -->
+            </nav>
+        </div>
+    </main>
 </body>
+
 </html>
